...
    <string name="submit">Submit</string>
    <string name="capture">Capture</string>
    <string name="picture">Take Picture</string>
    <string name="record_start">Start Recording</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="audio_accept">Accept</string>
    <string name="audio_delete">Delete</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
    <string name="request_permission_camera">This application requires permission to use the camera in order to record the food you eat.</string>
    <string name="request_permission_audio">This application requires permission to use the microphone in order to record the audio description.</string>
    <string name="breastfed">Breastfed</string>
    <string name="name">Name</string>
...
    <string name="plus">+</string>
    <string name="householdid">Household ID</string>
    <string name="participantid">Participant ID</string>
    <string name="finalize_eo_notification_channel_name">Finalise Eating Occasion</string>
    <string name="finalize_eo_notification_channel_description">Notification to remind user to finalise eating occasions.</string>
    <string name="whattime"><u>Time you would like to finalise your day:\u0020</u> </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tick">\u2714</string>
    <string name="cross">\u2716</string>
    <string name="addIngredients">Add Ingredients</string>
    <string name="finalize">Finalise</string>
    <string name="recipes">Recipes</string>
...
