...
    android:paddingBottom="5dp"
    tools:layout_editor_absoluteX="117dp"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imgIngredientImage"
        android:layout_width="@dimen/thumbnail_small_width"
        android:layout_height="@dimen/thumbnail_small_height"
        android:adjustViewBounds="false"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_btn_camera" />

...
